--- a/BeneluxWebb/static/css/pages/esea/esea_card_details_table.css
+++ b/BeneluxWebb/static/css/pages/esea/esea_card_details_table.css
@@ -2,7 +2,7 @@ div[id^="player_stats_table_"][id$="_wrapper"] {
     padding: 0px;
 }
 
-div[id^="player_stats_table_"][id$="_wrapper"] .player-cell {
+div[id^="player_stats_table_"][id$="_wrapper"] table.dataTable .player-cell {
   display: flex;
   align-items: center;
   gap: 0.25rem;
@@ -10,11 +10,11 @@ div[id^="player_stats_table_"][id$="_wrapper"] .player-cell {
   width: 100%; /* Ensure proper responsive behavior */
 }
 
-div[id^="player_stats_table_"][id$="_wrapper"] .player-cell img {
+div[id^="player_stats_table_"][id$="_wrapper"] table.dataTable .player-cell img {
   flex-shrink: 0;
 }
 
-div[id^="player_stats_table_"][id$="_wrapper"] .player-cell .player-name {
+div[id^="player_stats_table_"][id$="_wrapper"] table.dataTable .player-cell .player-name {
   display: inline-block;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -24,11 +24,17 @@ div[id^="player_stats_table_"][id$="_wrapper"] .player-cell .player-name {
 }
 
 /* Player type styling */
-div[id^="player_stats_table_"][id$="_wrapper"] .main-player-cell {
+div[id^="player_stats_table_"][id$="_wrapper"] table.dataTable .main-player-cell {
   font-weight: bold;
 }
-div[id^="player_stats_table_"][id$="_wrapper"] .sub-player-cell {
+div[id^="player_stats_table_"][id$="_wrapper"] table.dataTable .sub-player-cell {
   background-color: var(--background-dark1);
   color: gray;
   font-size: 0.9em;
+}
+
+@media screen and (max-width: 992px) {
+  div[id^="player_stats_table_"][id$="_wrapper"] tbody tr td {
+    font-size: 0.85em !important;
+  }
 }
