--- a/BeneluxWebb/static/css/pages/base.css
+++ b/BeneluxWebb/static/css/pages/base.css
@@ -11,12 +11,14 @@ html, body {
     padding: 0;
 
     font-size: 16px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 400;
 }
 
 body {
     background-color: var(--background);
     color: var(--text);
-
+    font-family: "Inter", sans-serif;
     font-size: 1rem;
 }
 
