--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -12,7 +12,7 @@
     <!-- CSS: Google fonts and icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- CSS: Bootstrap, Icons -->
@@ -87,7 +87,7 @@
         <div class="contact-links mb-3">
           <div class="mb-3">
             <span>Contact me: </span> 
-            <a href="https://discordapp.com/users/228206535405207552" class="icon-box" target="_blank" rel="noopener" title="Discord">
+            <a href="https://discordapp.com/users/228206535405207552" class="icon-box" target="_blank" rel="noopener" title="Discord" onclick="plausible('Discord Join Click')">
               <i class="bi bi-discord"></i>
             </a>
             <a href="https://x.com/Fowlz_" class="icon-box" target="_blank" rel="noopener" title="Twitter">
