--- a/BeneluxWebb/templates/esea/esea.html
+++ b/BeneluxWebb/templates/esea/esea.html
@@ -22,7 +22,7 @@
   <div class="sidebar left">
     <div class="sidebar-content">
       <div class="sidebar-header hoverable">
-        <a href="https://discord.gg/9xzsGTGhjm" target="_blank" rel="noopener noreferrer" style="margin: 10px 5px">
+        <a href="https://discord.gg/9xzsGTGhjm" target="_blank" rel="noopener noreferrer" style="margin: 10px 5px" onclick="plausible('Discord Join Click')">
           <img src="{{ url_for('static', filename='img/join_discord.png') }}" alt="Join the Discord" class="img-fluid sidebar-discord"/>
         </a>
       </div>
