--- a/BeneluxWebb/templates/stats/stats_player.html
+++ b/BeneluxWebb/templates/stats/stats_player.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="filter-wrapper open" data-filter-name="timestamp">
+            <div class="filter-wrapper" data-filter-name="timestamp">
                 <div class="filter-header">
                     <span>Timestamp</span>
                     <span class="filter-indicator"></span>
