--- a/BeneluxWebb/templates/esea/esea.html
+++ b/BeneluxWebb/templates/esea/esea.html
@@ -63,15 +63,17 @@
               </button>
             </li>
           {% endfor %}
-          <li class="nav-item dropdown d-none">
-            <button class="nav-link dropdown-toggle" id="DropdownMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              More
-            </button>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="DropdownMenu">
-              <!-- Dropdown items will be added dynamically -->
-            </ul>
-          </li>
         </ul>
+
+        <div class="nav-item dropdown d-none">
+          <button class="nav-link dropdown-toggle" id="DropdownMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            More
+          </button>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="DropdownMenu">
+            <!-- Dropdown items will be added dynamically -->
+          </ul>
+        </div>
+
       </div>
     </div>
 
