--- a/BeneluxWebb/static/css/pages/esea/esea.css
+++ b/BeneluxWebb/static/css/pages/esea/esea.css
@@ -56,24 +56,19 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  
-  width: max-content;
   padding-left: 0;
-  margin-left: 0;
-
-  margin: 0 auto;
-
   list-style-type: none;
+  margin-block: 0;
 }
 
 .nav-item {
   display: flex;
+  justify-content: center; 
   height: 35px;
-  width: max-content;
 
   border-inline: 1px solid var(--border);
 
-  background-color: var(--secondary-dark4)
+  background-color: var(--secondary-dark4);
 }
 
 .nav-link {
@@ -112,19 +107,32 @@
   font-size: 0.675em;
 }
 
-/* .dropdown-menu {
+.nav-item.dropdown {
+  flex-grow: 1;
+}
+.nav-item.dropdown .dropdown-toggle {
+  padding-inline: 6px;
+  width: 80px;
+  flex-shrink: 0;
+}
+.dropdown-menu {
   position: absolute;
   min-width: 0;
-  background-color: var(--card-bg);
+  background-color: var(--secondary-dark5);
   background-clip: padding-box;
   border: 1px solid var(--border);
   border-radius: 0.25rem;
   z-index: 1010;
+  padding: 0;
+  width: inherit;
 }
 
 .dropdown-menu li {
   color: var(--text);
-} */
+  background-color: transparent;
+  border: 0;
+  width: 100%;
+}
 
 @media screen and (max-width: 992px) {
   .esea-wrapper {
