--- a/BeneluxWebb/templates/esea/_esea_season.html
+++ b/BeneluxWebb/templates/esea/_esea_season.html
@@ -29,7 +29,7 @@
             <div class="team-card-body">
             
                 <div class="team-avatar">
-                    <img src="{{ team.team_avatar }}"
+                    <img src="{{ url_for('static', filename='img/avatars/' ~ team.team_id ~ '_' ~ team.season_number ~ '.png') }}"
                         alt="Team Avatar"
                         data-placeholder="{{ url_for('static', filename='img/faceit/team_avatar_placeholder.jpg') }}"
                         onerror="this.onerror=null;this.src=this.dataset.placeholder;">
@@ -148,7 +148,7 @@
                                 <div class="match-info-team-wrapper">
 
                                     <img class="match-info-team-avatar"
-                                        src="{{ team.team_avatar }}"
+                                        src="{{ url_for('static', filename='img/avatars/' ~ team.team_id ~ '_' ~ team.season_number ~ '.png') }}"
                                         alt="{{ team.team_name }}"
                                         loading="lazy"
                                         data-placeholder="{{ url_for('static', filename='img/faceit/team_avatar_placeholder.jpg') }}"
@@ -229,7 +229,7 @@
 
                                 <div class="match-info-team-wrapper">
                                     <img class="match-info-team-avatar"
-                                        src="{{ team.team_avatar }}"
+                                        src="{{ url_for('static', filename='img/avatars/' ~ team.team_id ~ '_' ~ team.season_number ~ '.png') }}"
                                         alt="{{ team.team_name }}"
                                         loading="lazy"
                                         data-placeholder="{{ url_for('static', filename='img/faceit/team_avatar_placeholder.jpg') }}"
