--- a/BeneluxWebb/templates/esea/_esea_season.html
+++ b/BeneluxWebb/templates/esea/_esea_season.html
@@ -39,7 +39,11 @@
                     <a class="team-link"
                         href="https://www.faceit.com/en/teams/{{ team.team_id }}/leagues"
                         target="_blank"
-                        onclick="plausible('Team Link Clicked', { props: { team: '{{ team.team_name }}', season: '{{ team.season_number }}' } })">
+                        onclick="plausible('Team Link Clicked', { props: { 
+                            location: 'Team Card',
+                            team: '{{ team.team_name }}', 
+                            season: '{{ team.season_number }}', 
+                            division: '{{ division_name }}' } })">
                             {{ team.team_name }}
                     </a>
                 </div>
@@ -49,7 +53,13 @@
                     <a href="https://www.faceit.com/en/players/{{player.player_name}}"
                         class="text-decoration-none text-reset"
                         target="_blank"
-                        onclick="plausible('Player Profile Clicked', { props: { player: '{{ player.player_name }}' } })">
+                        onclick="plausible('Player Profile Clicked', { props: { 
+                            location: 'Team Card',
+                            player: '{{ player.player_name }}', 
+                            team: '{{ team.team_name }}', 
+                            season: '{{ team.season_number }}', 
+                            division: '{{ division_name }}'} })">
+
                         <div class="main-player">
                             <div class="main-player-avatar">
                                 <img src="{{ player.player_avatar }}"
@@ -111,7 +121,11 @@
                         data-bs-target="#collapseTeam{{ division_name | replace(' ', '') }}{{ loop.index }}"
                         aria-expanded="false"
                         aria-controls="collapseTeam{{ division_name | replace(' ', '') }}{{ loop.index }}"
-                        onclick="plausible('Team Details Toggled', { props: { team: '{{ team.team_name }}', season: '{{ team.season_number }}' } })">
+                        onclick="plausible('Team Details Toggled', { props: { 
+                            location: 'Team Card',
+                            team: '{{ team.team_name }}', 
+                            season: '{{ team.season_number }}',
+                            division: '{{ division_name }}' } })">
                         <i class="bi bi-chevron-down"></i>
                     </button>
                 </div>
@@ -135,7 +149,12 @@
                                 class="match-info-box {{ 'highlight-border' if match.opponent_id in teams | map(attribute='team_id') | list else '' }}" 
                                 target="_blank" 
                                 rel="noopener noreferrer"
-                                onclick="plausible('Match Clicked', { props: { match_id: '{{ match.match_id }}', team: '{{ team.team_name }}', opponent: '{{ match.opponent }}' } })">
+                                onclick="plausible('Match Clicked', { props: { 
+                                    location: 'Team Card',
+                                    match_id: '{{ match.match_id }}', 
+                                    team: '{{ team.team_name }}', 
+                                    season: '{{ team.season_number }}',
+                                    division: '{{ division_name }}' } })">
                                 
                                 <div class="match-info-time">
                                     {% if match.match_time %}
