--- a/BeneluxWebb/templates/esea/esea.html
+++ b/BeneluxWebb/templates/esea/esea.html
@@ -17,6 +17,7 @@
 <!-- center-aligned tabs -->
 <div class="esea-page-wrapper">
   <div class="sidebar left">
+    <!-- Discord link -->
     <div class="sidebar-content">
       <div class="sidebar-header hoverable">
         <a href="https://discord.gg/9xzsGTGhjm" 
@@ -26,6 +27,36 @@
             onclick="plausible('Discord Join Click')">
           <img src="{{ url_for('static', filename='img/join_discord.png') }}" alt="Join the Discord" class="img-fluid sidebar-discord"/>
         </a>
+      </div>
+    </div>
+
+    <div class="sidebar-content">
+      <div class="sidebar-header">
+        <span> Player Highlights </span>
+      </div>
+      <div class="sidebar-body">
+        <div id="playerOfTheWeek" class="carousel slide" style="height: 150px;">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#playerOfTheWeek" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#playerOfTheWeek" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#playerOfTheWeek" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+
+          <div class="carousel-inner">
+            {% for stat in top_stats %}
+              <div class="carousel-item {% if loop.first %}active{% endif %}">
+                <!-- <img src="{{ url_for('static', filename='img/esea/PlayerOfTheWeek.webp') }}" class="d-block w-100" alt="Player of the Week"/> -->
+                <img src="{{ stat.player['avatar'] }}"
+                  class="player-avatar"
+                  alt="Player of the Week"
+                  data-placeholder="{{ url_for('static', filename='img/faceit/player_avatar_placeholder.jpg') }}"
+                  onerror="this.onerror=null;this.src=this.dataset.placeholder;"/>
+                <span>{{ stat.description }}</span>
+                <span>{{ stat.player['player_name']}}</span>
+              </div>
+            {% endfor %}
+          </div>
+        </div>
       </div>
     </div>
   </div>
