--- a/BeneluxWebb/templates/esea/esea.html
+++ b/BeneluxWebb/templates/esea/esea.html
@@ -19,6 +19,7 @@
 <div class="esea-page-wrapper">
   <div class="sidebar left">
     <!-- Discord link -->
+    <!-- Discord link -->
     <div class="sidebar-content">
       <div class="sidebar-header hoverable">
         <a href="https://discord.gg/9xzsGTGhjm" 
