Start if streams sidebar

--- a/BeneluxWebb/templates/esea/esea.html
+++ b/BeneluxWebb/templates/esea/esea.html
@@ -19,7 +19,6 @@
 <div class="esea-page-wrapper">
   <div class="sidebar left">
     <!-- Discord link -->
-    <!-- Discord link -->
     <div class="sidebar-content">
       <div class="sidebar-header hoverable">
         <a href="https://discord.gg/9xzsGTGhjm" 
@@ -38,6 +37,15 @@
       </div>
       <div class="sidebar-body">
         {% include 'esea/esea_potw.html' %}
+      </div>
+    </div>
+
+    <div class="sidebar-content">
+      <div class="sidebar-header">
+        <span> Current Streams </span>
+      </div>
+      <div class="sidebar-body">
+        {% include 'macros/streams_sidebar.html' %}
       </div>
     </div>
   </div>
