--- a/BeneluxWebb/static/css/pages/esea/esea_potw.css
+++ b/BeneluxWebb/static/css/pages/esea/esea_potw.css
@@ -1,7 +1,54 @@
+.potw-carousel {
+    width: 100%;
+    font-size: 0.9em;
+}
+
+.potw-indicators.carousel-indicators {
+    position: relative;
+    margin: 0;
+    margin-bottom: 5px;
+}
+
+.potw-item {
+    padding: 5px;
+    width: 100%;
+}
+
+.potw-top {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    overflow: hidden;
+    gap: 5px;
+}
+.potw-player-name {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-size: 1.2em;
+    font-weight: bold;
+    width: 100%;
+    text-align: center;
+    color: var(--primary);
+}
 .potw-avatar {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    border-radius: var(--border-radius-sm);
     object-fit: cover;
-    margin-bottom: 10px;
+}
+
+.potw-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 8px;
+    padding-top: 8px;
+    border-top: 1px solid var(--border);
+}
+.potw-desc {
+    font-weight: bold;
+}
+.potw-stat-value {
+    color: var(--primary);
 }
