--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -136,6 +136,9 @@
   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.js"></script>
+  
+  <!-- Twitch embeds -->
+  <script src="https://embed.twitch.tv/embed/v1.js"></script>
 
   <!-- Custom base JS -->
   <script src="{{ url_for('static', filename='js/darkmode.js') }}"></script>
